--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "BABEL_ENV=production mocha --compilers js:babel-register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch",
     "coverage": "cross-env BABEL_ENV=production babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
-    "standard": "standard --verbose --fix | snazzy"
+    "standard": "standard --verbose --fix | snazzy",
+    "retire": "retire"
   },
   "engines": {
     "node": ">=6.4.0",
@@ -47,14 +48,14 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-olasearch": "^1.0.3",
     "babel-preset-react-hmre": "^1.0.0",
-    "babel-register": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chokidar": "^1.7.0",
     "cross-env": "^5.0.5",
     "enzyme": "^2.9.1",
@@ -77,6 +78,7 @@
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "retire": "^1.4.0",
     "rimraf": "^2.6.1",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
