--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.8.7",
+  "version": "1.8.8",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -104,7 +104,7 @@
     "ramda": "^0.24.1",
     "react-list": "^0.8.8",
     "react-onclickoutside": "^6.6.0",
-    "react-pikaday-datepicker": "^3.0.0",
+    "react-pikaday-datepicker": "3.0.1",
     "react-responsive": "^1.3.4",
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
