--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "olasearch",
-  "version": "1.9.2",
+  "version": "1.9.3",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -51,7 +51,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
@@ -59,8 +59,8 @@
     "babel-register": "^6.26.0",
     "chokidar": "^1.7.0",
     "cross-env": "^5.1.1",
-    "enzyme": "^3.1.0",
-    "eslint": "^4.10.0",
+    "enzyme": "^3.1.1",
+    "eslint": "3.19.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^7.4.0",
     "expect": "^1.20.2",
@@ -70,13 +70,12 @@
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
+    "react": "^16.1.0",
     "react-addons-perf": "^15.4.2",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
-    "react-test-renderer": "^16.0.0",
+    "react-test-renderer": "^16.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "retire": "^1.4.0",
@@ -85,8 +84,8 @@
     "standard": "^10.0.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.1.0 < 16",
-    "react-dom": "^0.14.0 || ^15.1.0 < 16",
+    "react": ">=0.14.0",
+    "react-dom": ">=0.14.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
@@ -99,11 +98,11 @@
     "hoist-non-react-statics": "^2.3.1",
     "ismobilejs": "^0.4.1",
     "nouislider": "^10.1.0",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
     "ramda": "^0.25.0",
     "react-list": "^0.8.8",
-    "react-onclickoutside": "^6.6.3",
+    "react-onclickoutside": "^6.7.0",
     "react-pikaday-datepicker": "3.0.1",
     "react-responsive": "^3.0.0",
     "redux-logger": "^3.0.6",
