--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coverage": "cross-env BABEL_ENV=production babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
     "retire": "retire",
     "s3:deploy": "s3-deploy './dist/olasearch.core.min.latest.js' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/js --cache 604800,public && s3-deploy './dist/olasearch.core.min.css' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/css --cache 604800,public",
-    "cdn:invalidate": "aws-cloudfront-invalidate E1MMHSLEW3SZPY /assets/*",
+    "cdn:invalidate": "cf-invalidate E1MMHSLEW3SZPY /assets/*",
     "styleguide": "styleguidist server",
     "styleguidist:build": "styleguidist build",
     "prettier-standard": "prettier-standard 'src/**/!(polyfill)*.js'"
@@ -66,6 +66,7 @@
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.26.0",
     "chokidar": "^1.7.0",
+    "cloudfront-invalidate-cli": "^1.4.0",
     "cross-env": "^5.1.1",
     "enzyme": "^3.2.0",
     "eslint": "3.19.0",
@@ -85,8 +86,6 @@
     "nyc": "^11.3.0",
     "prettier-standard": "^7.0.3",
     "react": "^16.2.0",
-    "react-addons-perf": "^15.4.2",
-    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-styleguidist": "^6.0.33",
@@ -111,7 +110,6 @@
     "redux-thunk": "^2.2.0"
   },
   "dependencies": {
-    "aws-cloudfront-invalidate": "^0.1.3",
     "babel-runtime": "^6.25.0",
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
